[package]
name = "rillo"
version = "0.1.0"
edition = "2021"
description = "Input handling"
documentation = "https://docs.rs/rillo"
homepage = "https://github.com/ecmatthee/rillo"
readme = "readme.md"
repository = "https://github.com/ecmatthee/rillo"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
