[package]
name = "rillo"
version = "0.3.1"
edition = "2021"
description = "A TUI building library"
keywords = ["tui", "input", "terminal"]
categories = ["command-line-interface"]
authors = ["Ebert Charles Matthee <dev@ecmatthee.com>"]
documentation = "https://docs.rs/rillo"
homepage = "https://github.com/ecmatthee/rillo"
readme = "readme.md"
repository = "https://github.com/ecmatthee/rillo"
license = "MPL-2.0"

[dependencies]
crossterm = "0.23.2"
log = "0.4.17"
thiserror = "1.0.31"
